fixed overflow for userCompany

--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,9 @@ body {
 }
 .userCompany {
   color: grey;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 //not working correctly - should be in custom file
